--- a/templates/base.html
+++ b/templates/base.html
@@ -4,17 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wallet System</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <title>{% block title %}My Wallet System{% endblock %}</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <nav>
-        <a href="{% url 'wallet_dashboard' %}">Wallet</a>
-        <a href="{% url 'dashboard' %}">Merchant Dashboard</a>
-    </nav>
-    <main>
+    <!-- Include Header -->
+    {% include "header.html" %}
+
+    <!-- Include Navbar -->
+    <!-- sidebar adjust in left of dashbaor-->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-2">
+                {% include "navbar.html" %}
+            </div>
+            <div class="col-md-10">
+                <div class="container mt-4">
+                    {% block content %}
+                    {% include 'dashboard.html'%}
+                    {% endblock %}
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    {% comment %} <div class="container mt-4">
         {% block content %}
         {% endblock %}
-    </main>
+    </div> {% endcomment %}
+
+    <!-- Include Footer -->
+    {% include "footer.html" %}
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
