--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -1,9 +1,44 @@
-
-{% extends 'base.html' %}
 {% load static %}
-<h2>Login</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Login</button>
-</form>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+    <link rel="stylesheet" href="{% static 'css/users/login.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+</head>
+<body>
+    <div class="login-container d-flex align-items-center justify-content-center">
+        <div class="login-card">
+            <form method="POST">
+                {% csrf_token %}
+                <div class="mb-4">
+                    <h2 class="text-center">LOG IN</h2>
+                    <label for="username" class="form-label_1"><i class="fas fa-user"></i> User name / Email</label>
+                    <input type="text" id="username" class="form-control" placeholder="Enter your username or email" required>
+                </div>
+                <div class="mb-4">
+                    <label for="password" class="form-label_2"><i class="fas fa-lock"></i> Password</label>
+                    <input type="password" id="password" class="form-control" placeholder="Enter your password" required>
+                    <p class="forgot_password"><a href="#">Forgot Password ?</a></p>
+                </div>
+                <button type="submit" class="btn btn-primary w-100">LOG IN NOW <i class="fas fa-arrow-right"></i></button>
+            </form>
+            <div class="social-login mt-4 text-center">
+                <p>log in via</p>
+                <div>
+                    <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="social-icon"><i class="fab fa-facebook"></i></a>
+                    <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+                </div>
+            </div>
+            <div class="text-center mt-4">
+                <p>Don't have an account? <a href="{% url 'register' %}">Register</a></p>
+                </div>
+        </div>
+    </div>
+</body>
+</html>
