working on ui for login logout dashboar d

--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -13,16 +13,19 @@
 <body>
     <div class="login-container d-flex align-items-center justify-content-center">
         <div class="login-card">
+            <h2 class="text-center">LOG IN</h2>
             <form method="POST">
                 {% csrf_token %}
+
                 <div class="mb-4">
-                    <h2 class="text-center">LOG IN</h2>
+                    
                     <label for="username" class="form-label_1"><i class="fas fa-user"></i> User name / Email</label>
-                    <input type="text" id="username" class="form-control" placeholder="Enter your username or email" required>
+                    <input type="text" id="username" name="username" class="form-control" placeholder="Enter your username or email" required>
                 </div>
                 <div class="mb-4">
+                    
                     <label for="password" class="form-label_2"><i class="fas fa-lock"></i> Password</label>
-                    <input type="password" id="password" class="form-control" placeholder="Enter your password" required>
+                    <input type="password" id="password" name="password" class="form-control" placeholder="Enter your password" required>
                     <p class="forgot_password"><a href="#">Forgot Password ?</a></p>
                 </div>
                 <button type="submit" class="btn btn-primary w-100">LOG IN NOW <i class="fas fa-arrow-right"></i></button>
