--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %} 
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,38 +7,29 @@
     <title>{% block title %}My Wallet System{% endblock %}</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
 </head>
 <body>
-    <!-- Include Header -->
-    {% include "header.html" %}
-
-    <!-- Include Navbar -->
-    <!-- sidebar adjust in left of dashbaor-->
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-2">
-                {% include "navbar.html" %}
-            </div>
-            <div class="col-md-10">
-                <div class="container mt-4">
-                    {% block content %}
-                    {% include 'dashboard.html'%}
-                    {% endblock %}
-                </div>
-            </div>
+    <div class="d-flex" style="min-height: 100vh;">
+        <!-- Sidebar -->
+        {% include "sidebar.html" %}
+        
+        <!-- Main Content -->
+        <div class="flex-grow-1">
+            <!-- Header -->
+            {% include "header.html" %}
+            {% include 'dashboard.html'%}
+            <!-- Main Container -->
+           
+            <!-- Footer -->
+            {% include "footer.html" %}
         </div>
     </div>
 
-
-    {% comment %} <div class="container mt-4">
-        {% block content %}
-        {% endblock %}
-    </div> {% endcomment %}
-
-    <!-- Include Footer -->
-    {% include "footer.html" %}
-
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Font Awesome -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
 </body>
 </html>
