--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,3 @@
-<footer class="bg-dark text-white text-center py-3 mt-5">
-    <p>&copy; 2024 My Wallet. All rights reserved.</p>
+<footer class="bg-light text-center py-3 mt-auto">
+    <p class="mb-0">© 2024 My Wallet System. All rights reserved.</p>
 </footer>
