--- a/templates/header.html
+++ b/templates/header.html
@@ -1,31 +1,21 @@
-<header class="bg-primary text-white p-3">
-    <div class="d-flex justify-content-between align-items-center">
-        <!-- Logo or Company Name -->
-        <div class="logo">
-            <h3 class="m-0">My Wallet</h3>
-        </div>
-        
-        <!-- Notifications and Profile Dropdown -->
-        <div class="d-flex align-items-center">
-            <!-- Notification Icon -->
-            <div class="me-4">
-                <button class="btn btn-light btn-sm">
-                    <i class="bi bi-bell"></i> Notifications
-                </button>
-            </div>
-            
-            <!-- Profile Dropdown -->
-            <div class="dropdown">
-                <button class="btn btn-light dropdown-toggle" type="button" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="bi bi-person"></i> Profile
-                </button>
-                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
-                    <li><a class="dropdown-item" href="#">Switch to Merchant</a></li>
-                    <li><a class="dropdown-item" href="#">Settings</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="/logout">Logout</a></li>
-                </ul>
-            </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">My Wallet System</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fas fa-bell"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fas fa-envelope"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fas fa-user-circle"></i></a>
+                </li>
+            </ul>
         </div>
     </div>
-</header>
+</nav>
