--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -5,7 +5,7 @@
           <a href="#" class="nav-link text-white"><i class="fa fa-home me-2"></i> Home</a>
       </li>
       <li class="nav-item mb-3">
-          <a href="{% url 'wallet_dashboard' %}" class="nav-link text-white"><i class="fa fa-user me-2"></i> Wallet</a>
+          <a href="{% url 'wallet:dashboard' %}" class="nav-link text-white"><i class="fa fa-user me-2"></i> Wallet</a>
       </li>
       <li class="nav-item mb-3">
           <a href="#" class="nav-link text-white"><i class="fa fa-chart-line me-2"></i>Transactions</a>
@@ -16,7 +16,7 @@
 
       </li>
       <li class="nav-item">
-          <a href="#" class="nav-link text-white"><i class="fa fa-sign-out-alt me-2"></i> Logout</a>
+          <a href="users:logout" class="nav-link text-white"><i class="fa fa-sign-out-alt me-2"></i> Logout</a>
       </li>
   </ul>
 </div>
