--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="text-center mt-4">
-                <p>Don't have an account? <a href="{% url 'register' %}">Register</a></p>
+                <p>Don't have an account? <a href="{% url 'users:register' %}">Register Now</a></p>
                 </div>
         </div>
     </div>
