some ui changes and backend

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,5 +1,10 @@
+
+
+{% block title %}Dashboard{% endblock %}
+
+
 {% block content %}
-<h1 class="mb-4">Welcome to Dashboard</h1>
+<h1 class="mb-4">Welcome to {{ user.username }}  </h1>
 
 <!-- Row for Metrics Cards -->
 <div class="row g-3">
@@ -8,7 +13,7 @@
         <div class="card text-center shadow-sm border-0 h-100">
             <div class="card-body">
                 <h5 class="card-title text-primary">Total Transactions</h5>
-                <h2 class="text-dark">1,245</h2>
+                <h2 class="text-dark">{{ total_transactions }}</h2>
                 <p class="card-text text-muted">All transactions processed</p>
             </div>
         </div>
