--- a/templates/wallet/wallet_dashboard.html
+++ b/templates/wallet/wallet_dashboard.html
@@ -8,7 +8,7 @@
         <div class="col-md-6 mx-auto">
             <div class="card wallet-card p-4 shadow-sm">
                 <h5>Your Wallet Balance</h5>
-                <p class="balance">Rs 45,500</p>
+                <p class="balance">{{ wallet.balance }}</p>
                 <div class="d-flex justify-content-between mt-3">
                     <button class="btn btn-light btn-wallet px-4">Deposit</button>
                     <button class="btn btn-light btn-wallet px-4">Withdraw</button>
