adding func for payment method integratioans

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -24,7 +24,7 @@
         <div class="card text-center shadow-sm border-0 h-100">
             <div class="card-body">
                 <h5 class="card-title text-success">Sending</h5>
-                <h2 class="text-dark">Rs 34,800</h2>
+                <h2 class="text-dark">Rs{{ total_sending }}</h2>
                 <p class="card-text text-muted">Amount sent this month</p>
             </div>
         </div>
@@ -35,7 +35,7 @@
         <div class="card text-center shadow-sm border-0 h-100">
             <div class="card-body">
                 <h5 class="card-title text-warning">Receiving</h5>
-                <h2 class="text-dark">Rs 42,000</h2>
+                <h2 class="text-dark">Rs {{ total_receiving }}</h2>
                 <p class="card-text text-muted">Amount received this month</p>
             </div>
         </div>
