--- a/templates/base.html
+++ b/templates/base.html
@@ -13,13 +13,17 @@
 <body>
     <div class="d-flex" style="min-height: 100vh;">
         <!-- Sidebar -->
-        {% include "sidebar.html" %}
+        {% if user.role == 'admin'%}
+        {% include "sidebar_user.html" %}
+        {% endif %}
         
         <!-- Main Content -->
         <div class="flex-grow-1">
             <!-- Header -->
             {% include "header.html" %}
-            {% include 'dashboard.html'%}
+           {% block content%}
+            
+              {% endblock %}
             <!-- Main Container -->
            
             <!-- Footer -->
